<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/PhotoView" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/PhotoView_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/Android_PullToRefresh" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/Android_PullToRefresh_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/Android_Universal_Image_Loader" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/Android_Universal_Image_Loader_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/android_async_http" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/android_async_http_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/AndroidSlidingUpPanel" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/AndroidSlidingUpPanel_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/FloatingGroupExpandableListView" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/FloatingGroupExpandableListView_url" />
    </Preference>
    <Preference
        android:summary="@string/mit_license"
        android:title="@string/android_gif_drawable" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/android_gif_drawable_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/androidannotations" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/androidannotations_url" />
    </Preference>
    <Preference
        android:summary="@string/mit_license"
        android:title="@string/jsoup" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/jsoup_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/SystemBarTint" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/SystemBarTint_url" />
    </Preference>
    <Preference
        android:summary="@string/apache_license_2_0"
        android:title="@string/SwipeBackLayout" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/SwipeBackLayout_url" />
    </Preference>

</PreferenceScreen>