<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fei_ke.chiphellclient.MainActivity" >

    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="测试"
        android:visible="false"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/white_ptr_rotate"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_version_update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_version_update"/>
    <item
        android:id="@+id/action_open_source_notices"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/open_source_notices"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>